--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,18 @@
 # The URL the site will be built for
 base_url = "https://antidale.com/"
 
+default_language = "en"
+
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
+
+generate_feeds = true
+feed_filenames = ["atom.xml"]
+
+author = "Some Person"
 
 [markdown]
 # Whether to do syntax highlighting
