--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ author = "Antidale"
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = true
+# highlight_code = true
 
 [extra]
 # Put all your custom variables here
